/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.dremio.services.nessie.grpc.api";
option java_outer_classname = "ContentApiProto";

package com.dremio.services.nessie.grpc.proto;

service ContentService {
  rpc getContent (ContentRequest) returns (Content) {};
  rpc getMultipleContents (MultipleContentsRequest) returns (MultipleContentsResponse) {};
}

message ContentRequest {
  ContentKey contentKey = 1;
  string ref = 2;
  string hashOnRef = 3;
}

message MultipleContentsRequest {
  string ref = 1;
  string hashOnRef = 2;
  repeated ContentKey requestedKeys = 3;
}

message MultipleContentsResponse {
  repeated ContentWithKey contentWithKey = 1;
}

message Content {
  oneof type {
    IcebergTable iceberg = 1;
    DeltaLakeTable deltaLake = 2;
    IcebergView iceberg_view = 3;
  }
}

message ContentKey {
  repeated string elements = 1;
}

message ContentWithKey {
  ContentKey contentKey = 1;
  Content content = 2;
}

message IcebergTable {
  string id = 1;
  string metadataLocation = 2;
  int64 snapshotId = 3;
  int32 schemaId = 4;
  int32 specId = 5;
  int32 sortOrderId = 6;
}

message IcebergView {
  string id = 1;
  string metadataLocation = 2;
  int32 versionId = 3;
  int32 schemaId = 4;
  string dialect = 5;
  string sqlText = 6;
}

message DeltaLakeTable {
  string id = 1;
  repeated string metadataLocationHistory = 2;
  repeated string checkpointLocationHistory = 3;
  optional string lastCheckpoint = 4;
}
